@@ -1,9 +1,8 @@
 package com.yahoo.container.plugin.classanalysis.sampleclasses;
 
-import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
-
 import java.util.Collection;
+import java.util.List;
+import java.util.Set;
 
 /**
  * Input for class analysis test verifying Java 14 switch statement.
@@ -15,8 +14,8 @@ public class SwitchStatement {
     void switchStatement() throws Exception{
         String foo = "";
         Collection<?> c = switch (foo) {
-            case "list" -> ImmutableList.of();
-            case "set" -> ImmutableSet.of();
+            case "list" -> List.of();
+            case "set" -> Set.of();
             default -> throw new IllegalArgumentException();
         };
     }
